<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scheduleApp</string>
    <string name="action_settings">Settings</string>
    <string name="emailLabel">email</string>
    <string name="passwordLabel">password</string>
    <string name="loginButton">go</string>
    <string name="registerButton">register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="confirm_password">confirm</string>
    <string name="submit">submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_hint">first name…</string>
    <string name="last_hint">last name…</string>
    <string name="email_hint">email address…</string>
    <string name="pass_hint">password…</string>
    <string name="confirm_hint">confirm password…</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
